--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,7 +11,7 @@ body{
 }
 .page-header{
     height: 69px;
-    width: 1440px;
+    width: 100%;
     background-color: #EC362D;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     position:sticky;
@@ -118,6 +118,194 @@ body{
     border-radius: 5px;
     background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 64.58%, #000000 100%);
 }
+.quizz-screen{
+    width: 100%;
+
+    margin: 69px 0px 69px 0px;
+
+    background-color:#FAFAFA;
+
+    position: absolute;
+    top: 0;
+    z-index: 2;
+}
+.title-quizz{
+    width: 100%;
+    height: 227px;
+
+    font-size: 39px;
+    font-weight: 400;
+    color: #FFFFFF;
+
+    line-height: 45.7px;
+
+    position: relative;
+}
+.title-quizz img {
+    width: 100%;
+    height: 100%;
+}
+.shadow{
+    width: 100%;
+    height: 100%;
+
+    background-color: #000000;
+    opacity: 0.6;
+
+    position: absolute;
+    top:0;
+    z-index: 3;
+}
+.title-quizz p{
+    width: 100%;
+    height: 100%;
+
+    position: absolute;
+    top: 90.65px;
+    z-index: 4;
+
+    text-align: center;
+}
+.container-quizz{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    margin-bottom: 85px;
+}
+.box-quizz{
+    width: 759px;
+    height: 676px;
+
+    padding: 28px 35px 28px 35px;
+    margin: 42px 0px 0px 0px;
+
+    box-shadow: 0px 0px 10px 0px #0000000D;
+
+
+    background-color: #FFFFFF;
+}
+.question{
+    width: 100%;
+    height: 137.99px;
+
+    font-size: 23px;
+    font-weight: 700;
+    color: #FFFFFF;
+
+    background-color: #434CA0;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.options{
+    width: 100%;
+
+    margin-top: 20px;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    
+}
+.answer{
+    width: 300px;
+    height: 217px;
+
+    margin: 0px 0px 10px 0px;
+}
+.answer:hover, .back-home:hover, .restart:hover{
+    cursor: pointer;
+}
+.answer img{
+    width: 100%;
+    height: 175px;
+}
+.answer p{
+    font-size: 20px;
+    font-weight: 700;
+    color: #000000;
+
+    margin-top: 8px;
+}
+.box-result{
+    width: 759px;
+    height: 430px;
+
+    padding: 18px 18px 18px 18px;
+    margin: 42px 0px 0px 0px;
+
+    box-shadow: 0px 0px 10px 0px #0000000D;
+
+
+    background-color: #FFFFFF;
+}
+.result{
+    width: 100%;
+    height: 99px;
+
+    font-size: 23px;
+    font-weight: 700;
+    color: #FFFFFF;
+
+    background-color: #EC362D;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.result-details{
+    display: flex;
+    justify-content: space-between;
+
+    margin-top: 18px;
+}
+.result-details img{
+    width: 364px;
+    height: 273px;
+}
+.result-details div{
+    width: 328px;
+    height: 250;
+
+    font-size: 19px;
+    font-weight: 700;
+    color: #000000;
+}
+.restart{
+    width: 260px;
+    height: 52px;
+
+    border-radius: 15px;
+    border: 0;
+
+    background-color: #EC362D;
+
+    font-size: 21px;
+    font-weight: 400;
+    color: #FFFFFF;
+
+    margin-top: 50px;
+}
+.back-home{
+    width: 219px;
+    height: 44px;
+
+    font-size: 21px;
+    font-weight: 400;
+    color: #818181;
+
+    margin-top: 25px;
+
+    text-align: center;
+}
 .footer{
     height:211px;
+}
+.selected{
+    opacity: 0.3;
+}
+.minimize{
+    display: none;
 }
